--- a/RecycleVIew/RecycleView.Droid/Resources/layout/activity_main.axml
+++ b/RecycleVIew/RecycleView.Droid/Resources/layout/activity_main.axml
@@ -5,20 +5,13 @@
     android:orientation="vertical"  
     android:layout_width="match_parent"  
     android:layout_height="match_parent">
-	<include layout="@layout/toolbar" />
-	 <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/buttonPanel"
-        android:orientation="horizontal">    
-  </LinearLayout> 	
+	<include layout="@layout/toolbar" />	
 <mvvmcross.droid.support.v7.recyclerview.MvxRecyclerView
     android:id="@+id/recyclerView"  
     android:scrollbars="vertical"  
     android:layout_width="fill_parent"  
     android:layout_height="fill_parent"
-	local:MvxItemTemplate="@layout/item_contact"
+	local:MvxItemTemplate="@layout/item_task"
 	local:MvxBind="ItemsSource TaskCollection; ItemClick ShowTaskChangedView"
 	/>
 </LinearLayout>  
