--- a/TaskDropper/TaskDropper.Droid/Resources/layout/main_view.axml
+++ b/TaskDropper/TaskDropper.Droid/Resources/layout/main_view.axml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:local="http://schemas.android.com/apk/res-auto"
-	android:id="@+id/drawer_layout"
-	android:fitsSystemWindows="true"
-	android:layout_height="match_parent"
-	android:layout_width="match_parent">
+	android:id="@+id/main_f"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
 	<android.support.design.widget.CoordinatorLayout
 		android:id="@+id/main_frame"
 		android:fitsSystemWindows="true"
@@ -17,4 +16,4 @@
 			android:layout_height="match_parent"
 			android:layout_centerInParent="true" />
 	</android.support.design.widget.CoordinatorLayout>
-</android.support.v4.widget.DrawerLayout>
+	</LinearLayout>
