--- a/TaskDropper/TaskDropper.Droid/Resources/layout/about_view.axml
+++ b/TaskDropper/TaskDropper.Droid/Resources/layout/about_view.axml
@@ -5,48 +5,44 @@
     xmlns:local="http://schemas.android.com/apk/res-auto"  
 	android:layout_width="wrap_content"  
     android:layout_height="wrap_content">
-	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:id="@+id/textKind"
-		android:gravity = "center"
-		local:MvxBind="Text Kind"
+		
+	<android.support.v7.widget.CardView  
+		android:layout_width="match_parent"  
+		android:layout_height="wrap_content"  
+		card_view:cardElevation="4dp"  
+        card_view:cardCornerRadius="10dp"  
+        card_view:cardUseCompatPadding="true"
+		> 
+		<LinearLayout 
+			android:orientation="vertical"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:weightSum = "100"
+			
+			>
+			<TextView
+				android:text="Test"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:id="@+id/textView1"
+				android:gravity = "center"
+				android:layout_weight = "20"
+				local:MvxBind = "Text Name"
+				android:textSize="72dp"
 			/>
-	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:id="@+id/textEtag"
-		android:gravity = "center"
-		local:MvxBind="Text Etag"
+			<TextView
+				android:text="About"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:id="@+id/textView2"
+				android:gravity = "center"
+				android:layout_weight = "20"
+				local:MvxBind = "Text Email"
+				android:textSize="24dp"
 			/>
-	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:id="@+id/textOccupation"
-		android:gravity = "center"
-		local:MvxBind="Text Occupation"
-			/>
-	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:id="@+id/textGender"
-		android:gravity = "center"
-		local:MvxBind="Text Gender"
-			/>
-	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:id="@+id/textId"
-		android:gravity = "center"
-		local:MvxBind="Text Id"
-			/>
-	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:id="@+id/textDisplayName"
-		android:gravity = "center"
-		local:MvxBind="Text DisplayName"
-			/>
+		</LinearLayout>
+	</android.support.v7.widget.CardView>  
+	
 
 </FrameLayout>  
 
