--- a/TaskDropper/TaskDropper.Droid/Resources/layout/home_view.axml
+++ b/TaskDropper/TaskDropper.Droid/Resources/layout/home_view.axml
@@ -2,22 +2,22 @@
 <android.support.design.widget.CoordinatorLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:local="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+		<include layout="@layout/toolbar" />	
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="16dp"
             app:tabGravity="center"
-            app:tabMode="scrollable" />
-    </android.support.design.widget.AppBarLayout>
+            app:tabMode="scrollable"
+	        android:layout_gravity="bottom"
+	    local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        local:popupTheme="@style/ThemeOverlay.AppCompat.Light" 
+		android:background="@null"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
