fixed bug in Google Auth and ViewPager

--- a/TaskDropper/TaskDropper.Droid/Resources/layout/about_view.axml
+++ b/TaskDropper/TaskDropper.Droid/Resources/layout/about_view.axml
@@ -24,7 +24,7 @@
 				android:text="Test"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:id="@+id/textView1"
+				android:id="@+id/name_text"
 				android:gravity = "center"
 				android:layout_weight = "20"
 				local:MvxBind = "Text Name"
@@ -34,7 +34,7 @@
 				android:text="About"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:id="@+id/textView2"
+				android:id="@+id/email_text"
 				android:gravity = "center"
 				android:layout_weight = "20"
 				local:MvxBind = "Text Email"
