--- a/TaskDropper/TaskDropper.Droid/Resources/layout/login_view.axml
+++ b/TaskDropper/TaskDropper.Droid/Resources/layout/login_view.axml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"	
      xmlns:local="http://schemas.android.com/apk/res-auto"  
 	 xmlns:card_view="http://schemas.android.com/apk/res-auto"  
-    android:orientation="vertical"
+     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-	android:id="@+id/main_layout">
-	<include layout="@layout/toolbar" />
+    android:orientation="vertical" >
 	<Button
       android:id="@+id/googleLoginButton"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="@string/googleLogin" />
-		
+      android:text="@string/googleLogin" 
+	  android:layout_gravity="center"
+	/>	
 </LinearLayout>
