--- a/TaskDropper/TaskDropper.Droid/Resources/layout/toolbar.axml
+++ b/TaskDropper/TaskDropper.Droid/Resources/layout/toolbar.axml
@@ -4,30 +4,56 @@
     android:id="@+id/appbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-<RelativeLayout  
-    android:layout_width="match_parent"  
-    android:layout_height="wrap_content"  
-    android:orientation="vertical"  
-    android:padding="8dp">   
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"  
-        android:layout_height="?attr/actionBarSize"
-		android:layout_gravity="center_horizontal" 
-        local:layout_scrollFlags="scroll|enterAlways"
-        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        local:popupTheme="@style/ThemeOverlay.AppCompat.Light" 
-		android:background="@null"/>
-
-	<ImageButton 
-    android:id="@+id/imageButton" 
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-	android:layout_marginTop="10dp"
-    android:src="@drawable/PlusTask"
-	local:MvxBind = "Click ShowTaskChangedView"
-	android:layout_alignParentRight = "true"
-	android:layout_gravity = "center"
-	/>
-</RelativeLayout>
+	<RelativeLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:orientation="vertical"
+		android:padding="8dp">
+		<android.support.v7.widget.Toolbar
+			android:id="@+id/toolbar"
+			android:layout_width="match_parent"
+			android:layout_height="?attr/actionBarSize"
+			android:layout_gravity="center_horizontal"
+			local:layout_scrollFlags="scroll|enterAlways"
+			local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+			local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+			android:background="@null"
+			android:minWidth="25px"
+			android:minHeight="25px">
+			<ImageButton
+				android:id="@+id/back_button"
+				android:layout_width="30dp"
+				android:layout_height="30dp"
+				android:background="@drawable/BackIcon"
+				local:MvxBind = "Click Back"
+				android:layout_alignParentRight = "true"
+				android:layout_gravity = "left"/>
+			<TextView 
+				android:id="@+id/app_name_text"
+				android:text="@string/app_name"
+				android:textColor="@android:color/white"
+				android:textSize="20dp"
+				android:layout_marginLeft="20dp"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+			    android:layout_gravity = "left"/>
+			<ImageButton
+				android:id="@+id/logout_button"
+				android:layout_width="30dp"
+				android:layout_height="30dp"
+				android:background="@drawable/LogoutIcon"
+				local:MvxBind = "Click LogOutUser"
+				android:layout_alignParentRight = "true"
+				android:layout_gravity = "right"/>
+			<ImageButton
+				android:id="@+id/addtask_button"
+				android:layout_width="30dp"
+				android:layout_height="30dp"
+				android:background="@drawable/PlusIcon"
+				local:MvxBind = "Click ShowTaskChangedView"
+				android:layout_alignParentRight = "true"
+				android:layout_gravity = "right"
+				android:layout_marginRight="10dp"/>	
+		</android.support.v7.widget.Toolbar>	
+	</RelativeLayout>
 </android.support.design.widget.AppBarLayout>
