--- a/TaskDropper/TaskDropper.Droid/Resources/layout/item_changed.axml
+++ b/TaskDropper/TaskDropper.Droid/Resources/layout/item_changed.axml
@@ -5,8 +5,18 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-	android:id="@+id/main_layout">
+	android:id="@+id/content_layout">
 	<include layout="@layout/toolbar" />
+	<ScrollView
+		android:id="@+id/scrollingElement"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+		android:clickable="false">
+	<LinearLayout
+     android:id="@+id/LinearLayout1"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 	<android.support.v7.widget.CardView  
 		style="@style/CardViewStyle"
 		card_view:cardElevation="4dp"  
@@ -34,6 +44,7 @@
 		android:hint = "Description"
 	    local:MvxBind = "Text Description"/>
 		</android.support.v7.widget.CardView>
+
 	<LinearLayout
 		android:orientation="horizontal"
 		android:layout_width="match_parent"
@@ -42,7 +53,7 @@
 		<CheckBox
 			android:id = "@+id/status_check"
 			android:layout_width = "wrap_content"
-			android:layout_height = "match_parent"
+			android:layout_height = "wrap_content"
 			android:textColor = "@android:color/black"
 		    local:MvxBind = "Checked Status"/>
 		<TextView
@@ -50,33 +61,36 @@
 			android:text = "Done"
 			android:layout_width = "wrap_content"
 			android:layout_height = "wrap_content"
-		/>
-		
+		/>	
 	</LinearLayout>
-
+<LinearLayout
+		android:orientation="horizontal"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_weight="1">
 	<Button
 			android:id = "@+id/OpenPopup"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginLeft="0dip"
-			android:text="Attach Photo"
-		    />
-
-
-
-	 <ImageView
-		android:id = "@+id/imageview"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    local:MvxBind="Bitmap Bytes,Converter=InMemoryImage"
-    />
-	<Button
+			android:text="Attach Photo"/>
+    <Button
 			android:id = "@+id/DettachPhoto"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginLeft="0dip"
+			android:layout_marginLeft="10dip"
 			android:text="DettachPhoto"
-		    local:MvxBind = "Click DettachPhoto; Enabled PhotoStatus"/>
+		    local:MvxBind = "Click DettachPhoto; Enabled IsDetachEnabled"/>
+</LinearLayout>
+
+	 <ImageView
+		android:id = "@+id/imageview"
+			android:padding="10dip"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    local:MvxBind="Bitmap Photo,Converter=InMemoryImage"
+    />
+	
 	<LinearLayout
 		android:orientation="horizontal"
 		android:layout_width="match_parent"
@@ -90,13 +104,15 @@
 			android:layout_height="wrap_content"
 			android:layout_marginLeft="0dip"
 			android:text="Save"
-		    local:MvxBind = "Click SaveCommand; Enabled SaveStatus"/>
+		    local:MvxBind = "Click SaveCommand; Enabled IsSavingEnabled"/>
 		<Button
 			android:id = "@+id/Deletetask"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:layout_marginLeft="10dip"
 			android:text="Delete"
 		    local:MvxBind = "Click DeleteCommand"/>
 	</LinearLayout>
-
+</LinearLayout>
+</ScrollView>
 </LinearLayout>
