--- a/TaskDropper/TaskDropper.iOS/Views/About/AboutView.xib
+++ b/TaskDropper/TaskDropper.iOS/Views/About/AboutView.xib
@@ -8,39 +8,56 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AboutView">
             <connections>
                 <outlet property="view" destination="2" id="RRd-Eg-VrN"/>
-                <outlet property="nameTextView" destination="1302" id="name-outlet-1302"/>
-                <outlet property="emailTextView" destination="1504" id="name-outlet-1504"/>
+                <outlet property="NameLabel" destination="440" id="name-outlet-440"/>
+                <outlet property="EmailLabel" destination="441" id="name-outlet-441"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="2">
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <point key="canvasLocation" x="-3" y="-29"/>
+            <color key="backgroundColor" customColorSpace="sRGB" colorSpace="calibratedRGB" red="1" green="0.93725490196078431" blue="0.93725490196078431" alpha="1"/>
             <subviews>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" id="1302" translatesAutoresizingMaskIntoConstraints="NO" text="Text">
-                    <rect key="frame" x="23" y="156" width="356" height="128"/>
+                <view contentMode="scaleToFill" id="439" translatesAutoresizingMaskIntoConstraints="NO">
+                    <rect key="frame" x="20" y="91" width="360" height="270"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                </textView>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" id="1504" translatesAutoresizingMaskIntoConstraints="NO" text="Text">
-                    <rect key="frame" x="23" y="304" width="356" height="128"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                </textView>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sergey Koshlatuu" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="440" translatesAutoresizingMaskIntoConstraints="NO" numberOfLines="2">
+                            <rect key="frame" x="0.0" y="0.0" width="360" height="189"/>
+                            <fontDescription key="fontDescription" name="NK123" family="NK123" pointSize="48"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="koshsy6363@gmail.com" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="441" translatesAutoresizingMaskIntoConstraints="NO">
+                            <rect key="frame" x="0.0" y="197" width="360" height="59"/>
+                            <fontDescription key="fontDescription" name="NK123" family="NK123" pointSize="28"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute keyPath="layer.cornerRadius" type="number">
+                            <real key="value" value="15"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                    <constraints>
+                        <constraint id="1054" firstItem="440" firstAttribute="top" secondItem="439" secondAttribute="top"/>
+                        <constraint id="1055" firstItem="440" firstAttribute="leading" secondItem="439" secondAttribute="leading"/>
+                        <constraint id="1056" firstItem="440" firstAttribute="trailing" secondItem="439" secondAttribute="trailing"/>
+                        <constraint id="1057" firstAttribute="bottom" secondItem="440" secondAttribute="bottom" constant="81"/>
+                        <constraint id="1058" firstItem="441" firstAttribute="top" secondItem="440" secondAttribute="bottom" constant="8"/>
+                        <constraint id="1059" firstItem="441" firstAttribute="leading" secondItem="439" secondAttribute="leading"/>
+                        <constraint id="1060" firstItem="441" firstAttribute="trailing" secondItem="439" secondAttribute="trailing"/>
+                        <constraint id="1061" firstAttribute="bottom" secondItem="441" secondAttribute="bottom" constant="14"/>
+                        <constraint id="1233" firstAttribute="height" constant="270"/>
+                    </constraints>
+                </view>
             </subviews>
             <constraints>
-                <constraint id="1505" firstItem="1302" firstAttribute="top" secondItem="2" secondAttribute="top" constant="156"/>
-                <constraint id="1506" firstAttribute="trailing" secondItem="1302" secondAttribute="trailing" constant="35"/>
-                <constraint id="1507" firstItem="1302" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="23"/>
-                <constraint id="1508" firstItem="1504" firstAttribute="top" secondItem="1302" secondAttribute="bottom" constant="20"/>
-                <constraint id="1509" firstItem="1504" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="23"/>
-                <constraint id="1510" firstAttribute="trailing" secondItem="1504" secondAttribute="trailing" constant="35"/>
-                <constraint id="1511" firstAttribute="bottom" secondItem="1302" secondAttribute="bottom" constant="452"/>
-                <constraint id="1512" firstAttribute="bottom" secondItem="1504" secondAttribute="bottom" constant="304"/>
+                <constraint id="1050" firstItem="439" firstAttribute="top" secondItem="2" secondAttribute="top" constant="91"/>
+                <constraint id="1051" firstAttribute="trailing" secondItem="439" secondAttribute="trailing" constant="34"/>
+                <constraint id="1052" firstItem="439" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="20"/>
+                <constraint id="1053" firstAttribute="bottom" secondItem="439" secondAttribute="bottom" constant="375"/>
             </constraints>
         </view>
     </objects>
