--- a/TaskDropper/TaskDropper.iOS/Views/TaskCell/TaskCell.xib
+++ b/TaskDropper/TaskDropper.iOS/Views/TaskCell/TaskCell.xib
@@ -7,38 +7,64 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="64" id="cxk-wN-pdQ" customClass="TaskCell" reuseIdentifier="TaskCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" rowHeight="94" id="cxk-wN-pdQ" customClass="TaskCell" reuseIdentifier="TaskCell">
+            <rect key="frame" x="0.0" y="0.0" width="326" height="94"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cxk-wN-pdQ" id="YTl-1W-gDM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="63"/>
+                <rect key="frame" x="0.0" y="0.0" width="326" height="93"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="145" translatesAutoresizingMaskIntoConstraints="NO">
-                        <rect key="frame" x="16" y="16" width="228" height="31"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="148" translatesAutoresizingMaskIntoConstraints="NO">
-                        <rect key="frame" x="261" y="16" width="51" height="31"/>
-                    </switch>
+                    <view contentMode="scaleToFill" id="3717" translatesAutoresizingMaskIntoConstraints="NO">
+                        <rect key="frame" x="6" y="12" width="315" height="71"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="145" translatesAutoresizingMaskIntoConstraints="NO" numberOfLines="3">
+                                <rect key="frame" x="8" y="8" width="228" height="55"/>
+                                <fontDescription key="fontDescription" name="NK123" family="NK123" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="2093" translatesAutoresizingMaskIntoConstraints="NO">
+                                <rect key="frame" x="266" y="18" width="32" height="33"/>
+                                <constraints>
+                                    <constraint id="6023" firstAttribute="height" constant="33"/>
+                                    <constraint id="6024" firstAttribute="width" constant="32"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <constraints>
+                            <constraint id="4933" firstItem="145" firstAttribute="top" secondItem="3717" secondAttribute="top" constant="8"/>
+                            <constraint id="4940" firstItem="145" firstAttribute="leading" secondItem="3717" secondAttribute="leading" constant="8"/>
+                            <constraint id="4947" firstAttribute="bottom" secondItem="145" secondAttribute="bottom" constant="8"/>
+                            <constraint id="4960" firstAttribute="trailing" secondItem="145" secondAttribute="trailing" constant="79"/>
+                            <constraint id="5502" firstItem="2093" firstAttribute="top" secondItem="3717" secondAttribute="top" constant="18"/>
+                            <constraint id="5506" firstAttribute="trailing" secondItem="2093" secondAttribute="trailing" constant="17"/>
+                            <constraint id="5678" firstItem="2093" firstAttribute="top" secondItem="3717" secondAttribute="top" constant="18"/>
+                            <constraint id="5679" firstAttribute="trailing" secondItem="2093" secondAttribute="trailing" constant="17"/>
+                            <constraint id="5680" firstAttribute="bottom" secondItem="2093" secondAttribute="bottom" constant="20"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute keyPath="layer.cornerRadius" type="number">
+                                <real key="value" value="15"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint id="379" firstItem="145" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="16"/>
-                    <constraint id="380" firstItem="145" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" constant="16"/>
-                    <constraint id="381" firstAttribute="bottom" secondItem="145" secondAttribute="bottom" constant="16"/>
-                    <constraint id="382" firstItem="148" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="16"/>
-                    <constraint id="383" firstAttribute="trailing" secondItem="148" secondAttribute="trailing" constant="10"/>
-                    <constraint id="384" firstAttribute="bottom" secondItem="148" secondAttribute="bottom" constant="16"/>
-                    <constraint id="760" firstAttribute="trailing" secondItem="145" secondAttribute="trailing" constant="76"/>
+                    <constraint id="5212" firstItem="3717" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="12"/>
+                    <constraint id="5219" firstItem="3717" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" constant="6"/>
+                    <constraint id="5226" firstAttribute="bottom" secondItem="3717" secondAttribute="bottom" constant="10"/>
+                    <constraint id="5233" firstAttribute="trailing" secondItem="3717" secondAttribute="trailing" constant="5"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="titleLabel" destination="145" id="name-outlet-145"/>
-                <outlet property="statusSwitch" destination="148" id="name-outlet-148"/>
+                <outlet property="ChecboxImage" destination="2093" id="name-outlet-2093"/>
             </connections>
-            <directionalEdgeInsets key="directionalLayoutMargins" top="8" left="8" bottom="8" right="8"/>
+            <point key="canvasLocation" x="14" y="-14"/>
+            <edgeInsets key="layoutMargins" top="88" left="8" bottom="88" right="8"/>
+            <rect key="contentStretch" x="0.5" y="0.5" width="1" height="1"/>
+            <color key="backgroundColor" colorSpace="calibratedRGB" red="0.97254901960784312" green="0.93333333333333335" blue="0.93333333333333335" alpha="1"/>
         </tableViewCell>
     </objects>
 </document>
