--- a/TaskDropper/TaskDropper.Droid/Resources/layout/home_view.axml
+++ b/TaskDropper/TaskDropper.Droid/Resources/layout/home_view.axml
@@ -25,8 +25,9 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        app:tabMaxWidth="0dp"
        app:tabGravity="fill"
        app:tabMode="fixed"
-	   android:layout_gravity="bottom"
+	   android:layout_gravity="bottom"	
+		android:background="@color/cardview_light_background"
 	   local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-       local:popupTheme="@style/ThemeOverlay.AppCompat.Light" 
-	  android:background="@null"/>
+       local:popupTheme="@style/ThemeOverlay.AppCompat.Dark" 
+	 />
 </android.support.design.widget.CoordinatorLayout>
