--- a/TaskDropper/TaskDropper.Droid/Resources/layout/home_view.axml
+++ b/TaskDropper/TaskDropper.Droid/Resources/layout/home_view.axml
@@ -29,7 +29,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_above="@+id/tabs"
-			local:MvxBind="Visible IsNoInternetVisible"
+			local:MvxBind="Visible BooleanTrueToFalse(IsNoInternetVisible)"
 			>
 			<TextView
 				android:id="@+id/no_internet_text_view"
