working with camera? permission and renders for login

--- a/TaskDropper/TaskDropper.Forms/TaskDropper.Forms/Pages/AboutView.xaml
+++ b/TaskDropper/TaskDropper.Forms/TaskDropper.Forms/Pages/AboutView.xaml
@@ -15,6 +15,12 @@
                      Icon="PlusIcon.png"
                      Command="{mvx:MvxBind ShowTaskChangedView}"
                      Priority="0"/>
+        <ToolbarItem Name="AddTaskMenuItem"
+                     Order="Primary"          
+                     Text=""
+                     Icon="LogoutIcon.png"
+                     Command="{mvx:MvxBind LogOutUserFormsCommand}"
+                     Priority="0"/>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout>
