--- a/TaskDropper/TaskDropper.Forms/TaskDropper.Forms/Pages/GoogleLoginPage.xaml
+++ b/TaskDropper/TaskDropper.Forms/TaskDropper.Forms/Pages/GoogleLoginPage.xaml
@@ -2,28 +2,25 @@
 <views:MvxContentPage 
    xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:TypeArguments="viewModels:GoogleLoginViewModel"
+    x:TypeArguments="viewModels:FormsLoginVieModel"
     xmlns:mvx="clr-namespace:MvvmCross.Forms.Bindings;assembly=MvvmCross.Forms"
     xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:viewModels="clr-namespace:TaskDropper.Core.ViewModels;assembly=TaskDropper.Core"
     xmlns:customControls="clr-namespace:TaskDropper.Forms.CustomControls"
-    x:Class="TaskDropper.Forms.Pages.GoogleLoginPage">
+    x:Class="TaskDropper.Forms.Pages.GoogleLoginPage" x:Name="SourceView"
+    >
+
     <ContentPage.Content>
-        <StackLayout>
+        <Grid>
             <Button WidthRequest="300"
                     HeightRequest="40" 
                     HorizontalOptions="Center"
                     VerticalOptions="Center" 
                     Text="Login with Google" 
-                    Clicked="GoogleLogin_Clicked"
+                    Clicked="GoogleLogin_Clicked" 
                     />
-        </StackLayout>
-    </ContentPage.Content>
-    <customControls:LoginView 
-        HomeView="{Binding ShowHomeViewModelCommand}"
-        IsVisible="False"
-        x:Name="LoginView">
+        </Grid>
         
-    </customControls:LoginView>
+    </ContentPage.Content>
 </views:MvxContentPage>
