--- a/TaskDropper/TaskFropper.WPF/Resources/Theme/Theme.xaml
+++ b/TaskDropper/TaskFropper.WPF/Resources/Theme/Theme.xaml
@@ -5,5 +5,6 @@
         <ResourceDictionary Source="RadioButton.xaml" />
         <ResourceDictionary Source="ScrollBar.xaml" />
         <ResourceDictionary Source="TextBox.xaml" />
+        <ResourceDictionary Source="Menu.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
